# Project-Singularity

./: README.md  package.json  research_paper.txt
engines/python_models/: quantum3_hawking_complete.py
singularity2/: CMakeLists.txt
singularity2/shaders/: bloom.comp  raymarch.comp
singularity2/src/: main.cpp
web/backend/: README.md  main.py  requirements.txt  solver.py  test_client.html
web/frontend/: README.md  index.html  package-lock.json  package.json
web/frontend/src/: App.jsx  styles.css
web/frontend/src/components/: Backdrop.jsx  ControlPanel.jsx  Dashboard.jsx  Readout.jsx  ReportPanel.jsx  Reveal.jsx  ScopePanel.jsx  SiteFooter.jsx  SiteNav.jsx  Splash.jsx  StripChart.jsx
web/frontend/src/hooks/: useReportJob.js  useSimulationSocket.js
web/frontend/src/pages/: About.jsx  Home.jsx  Model.jsx  Simulation.jsx
